Completed postgres executor

--- a/app/plugins/flair-engine-hello-plugin-3.0.0-SNAPSHOT/plugin.properties
+++ b/app/plugins/flair-engine-hello-plugin-3.0.0-SNAPSHOT/plugin.properties
@@ -1,5 +1,5 @@
 plugin.id=hello-plugin
-plugin.class=com.fbi.engine.plugins.hello.SpringHelloPluginApplication
+plugin.class=com.fbi.engine.plugins.hello.HelloPlugin
 plugin.version=3.0.0-SNAPSHOT
 plugin.provider=Vizcentric
 plugin.dependencies=
