--- a/plugins/postgres/src/main/resources/plugin.properties
+++ b/plugins/postgres/src/main/resources/plugin.properties
@@ -1,5 +1,5 @@
 plugin.id=postgres-plugin
-plugin.class=com.fbi.engine.plugins.hello.HelloPlugin
+plugin.class=com.fbi.engine.plugins.postgres.PostgresPlugin
 plugin.version=3.0.0-SNAPSHOT
 plugin.provider=Vizcentric
 plugin.dependencies=
