--- a/app/pom.xml
+++ b/app/pom.xml
@@ -144,7 +144,11 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
-
+		<dependency>
+			<groupId>com.fbi.engine</groupId>
+			<artifactId>flair-engine-api</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
