--- a/app/src/main/resources/config/application-dev.yml
+++ b/app/src/main/resources/config/application-dev.yml
@@ -13,6 +13,10 @@
 # http://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 # ===================================================================
 
+security:
+  ignored:
+  - /**
+
 management:
   security:
     roles: ADMIN
