--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -28,6 +28,8 @@
 		<java.version>1.8</java.version>
 
 		<lombok.version>1.18.8</lombok.version>
+
+		<testcontainers.version>1.12.4</testcontainers.version>
 	</properties>
 
 	<dependencies>
@@ -53,6 +55,17 @@
 				<artifactId>lombok</artifactId>
 				<version>${lombok.version}</version>
 				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.testcontainers</groupId>
+				<artifactId>testcontainers</artifactId>
+				<version>${testcontainers.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.testcontainers</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>${testcontainers.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
