--- a/plugins/postgres/pom.xml
+++ b/plugins/postgres/pom.xml
@@ -18,7 +18,7 @@
 
 	<properties>
 		<plugin.id>postgres-plugin</plugin.id>
-		<plugin.class>com.fbi.engine.plugins.hello.HelloPlugin</plugin.class>
+		<plugin.class>com.fbi.engine.plugins.postgres.PostgresPlugin</plugin.class>
 		<plugin.version>3.0.0</plugin.version>
 		<plugin.provider>Vizcentric</plugin.provider>
 		<plugin.dependencies></plugin.dependencies>
@@ -26,11 +26,6 @@
 
 
 	<dependencies>
-		<dependency>
-			<groupId>net.bytebuddy</groupId>
-			<artifactId>byte-buddy</artifactId>
-			<version>1.7.1</version>
-		</dependency>
 		<dependency>
 			<groupId>com.fbi.engine</groupId>
 			<artifactId>flair-engine-api</artifactId>
@@ -79,6 +74,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<!-- test::end -->
