Added oracle executor

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -21,6 +21,7 @@
 		<module>core</module>
 		<module>postgres</module>
 		<module>mysql</module>
+		<module>oracle</module>
 		<module>test</module>
 	</modules>
 
