--- a/pom.xml
+++ b/pom.xml
@@ -194,9 +194,9 @@
         <project.scm.id>github-credentials</project.scm.id>
 
         <!-- our dependencies -->
-        <flair-messages.version>0.0.34</flair-messages.version>
+        <flair-messages.version>0.0.36-SNAPSHOT</flair-messages.version>
         <flair-query-language.version>1.6.9</flair-query-language.version>
-        <project-bi-common.version>1.3.29</project-bi-common.version>
+        <project-bi-common.version>1.3.30-SNAPSHOT</project-bi-common.version>
         <all-grpc.version>1.23.0</all-grpc.version>
         <lombok.version>1.18.8</lombok.version>
 
