--- a/pom.xml
+++ b/pom.xml
@@ -204,7 +204,7 @@
 					<version>3.2.0</version>
 					<configuration>
 						<descriptors>
-							<descriptor>src/assembly/test.xml</descriptor>
+							<descriptor>src/assembly/assembly.xml</descriptor>
 						</descriptors>
 					</configuration>
 				</plugin>
