--- a/plugins-test/pom.xml
+++ b/plugins-test/pom.xml
@@ -8,32 +8,28 @@
 		<groupId>com.fbi.engine</groupId>
 		<artifactId>flair-engine-parent</artifactId>
 		<version>3.0.0-SNAPSHOT</version>
-		<relativePath />
 	</parent>
 
 
 	<groupId>com.fbi.engine</groupId>
-	<artifactId>flair-engine-plugins-core</artifactId>
+	<artifactId>flair-engine-plugins-test</artifactId>
 	<version>3.0.0-SNAPSHOT</version>
-	<name>flair-engine-plugins-core</name>
+	<name>flair-engine-plugins-test</name>
 
 
 	<dependencies>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>com.fbi.engine</groupId>
 			<artifactId>flair-engine-api</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
+
+		<!-- test::begin -->
 		<dependency>
-			<groupId>org.pf4j</groupId>
-			<artifactId>pf4j-spring</artifactId>
-			<version>0.5.0</version>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
 		</dependency>
+		<!-- test::end -->
 	</dependencies>
 
 
