Fixed default driver pathing, removed assembly and fixed compilers

--- a/plugins-core/pom.xml
+++ b/plugins-core/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>pf4j-spring</artifactId>
 			<version>0.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+
 	</dependencies>
 
 
