--- a/plugins/mysql/pom.xml
+++ b/plugins/mysql/pom.xml
@@ -90,6 +90,104 @@
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*IntegrationTest</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>jenkins</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.22.0</version>
+						<executions>
+							<execution>
+								<phase>integration-test</phase>
+								<goals>
+									<goal>test</goal>
+								</goals>
+								<configuration>
+									<environmentVariables>
+										<it-database.port>${it-database.port}</it-database.port>
+									</environmentVariables>
+									<excludes>
+										<exclude>none</exclude>
+									</excludes>
+									<includes>
+										<include>**/*IntegrationTest</include>
+									</includes>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>io.fabric8</groupId>
+						<artifactId>docker-maven-plugin</artifactId>
+						<version>0.27.2</version>
+						<executions>
+							<execution>
+								<id>prepare-it-database</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>start</goal>
+								</goals>
+								<configuration>
+									<images>
+										<image>
+											<name>mysql:8.0.16</name>
+											<alias>it-mysql-database</alias>
+											<run>
+												<env>
+													<MYSQL_USER>mysql</MYSQL_USER>
+													<MYSQL_PASSWORD>admin</MYSQL_PASSWORD>
+													<MYSQL_DATABASE>services</MYSQL_DATABASE>
+													<MYSQL_ROOT_PASSWORD>root</MYSQL_ROOT_PASSWORD>
+												</env>
+												<volumes>
+													<bind>src/test/resources/init.sql:/docker-entrypoint-initdb.d/init.sql</bind>
+												</volumes>
+												<network>
+													<name>jenkins</name>
+													<mode>custom</mode>
+												</network>
+												<ports>
+													<port>it-database.port:3306</port>
+												</ports>
+												<wait>
+													<!-- leave it as one liner -->
+													<log>(?s)MySQL init process done. Ready for start up.[\s\S]*ready for connections</log>
+													<time>20000</time>
+												</wait>
+												<log>
+													<prefix>TC</prefix>
+													<date>default</date>
+													<color>cyan</color>
+												</log>
+											</run>
+										</image>
+									</images>
+								</configuration>
+							</execution>
+							<execution>
+								<id>remove-it-database</id>
+								<phase>post-integration-test</phase>
+								<goals>
+									<goal>stop</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
