--- a/app/pom.xml
+++ b/app/pom.xml
@@ -99,7 +99,7 @@
 		</repository>
 	</repositories>
 	<properties>
-
+		<maven.test.skip>true</maven.test.skip>
 		<pf4j.version>2.3.0</pf4j.version>
 		<pf4j-spring.version>0.5.0</pf4j-spring.version>
 		<docker-maven-plugin.version>0.27.2</docker-maven-plugin.version>
