--- a/plugins/mysql/pom.xml
+++ b/plugins/mysql/pom.xml
@@ -138,13 +138,17 @@
 								<id>prepare-it-database</id>
 								<phase>pre-integration-test</phase>
 								<goals>
+									<goal>build</goal>
 									<goal>start</goal>
 								</goals>
 								<configuration>
 									<images>
 										<image>
-											<name>mysql:8.0.16</name>
+											<name>mysql-test:8.0.16</name>
 											<alias>it-mysql-database</alias>
+											<build>
+												<dockerFile>Dockerfile</dockerFile>
+											</build>
 											<run>
 												<env>
 													<MYSQL_USER>mysql</MYSQL_USER>
@@ -152,9 +156,6 @@
 													<MYSQL_DATABASE>services</MYSQL_DATABASE>
 													<MYSQL_ROOT_PASSWORD>root</MYSQL_ROOT_PASSWORD>
 												</env>
-												<volumes>
-													<bind>src/test/resources/init.sql:/docker-entrypoint-initdb.d/init.sql</bind>
-												</volumes>
 												<network>
 													<name>jenkins</name>
 													<mode>custom</mode>
