--- a/plugins/postgres/pom.xml
+++ b/plugins/postgres/pom.xml
@@ -122,8 +122,7 @@
 								</goals>
 								<configuration>
 									<environmentVariables>
-										<!-- <it-database.port>${it-database.port}</it-database.port> -->
-										<it-database.port>5432</it-database.port>
+										<it-database.port>${it-database.port}</it-database.port>
 										<it-database.host>it-postgres-database</it-database.host>
 										<it-database.user>${docker.postgres.username}</it-database.user>
 										<it-database.password>${docker.postgres.password}</it-database.password>
@@ -168,10 +167,10 @@
 												<network>
 													<name>jenkins</name>
 													<mode>custom</mode>
+													<alias>it-postgres-database</alias>
 												</network>
 												<ports>
-													<!-- <port>it-database.port:5432</port> -->
-													<port>1919:5432</port>
+													<port>it-database.port:5432</port>
 												</ports>
 												<wait>
 													<!-- leave it as one liner -->
