--- a/app/pom.xml
+++ b/app/pom.xml
@@ -262,7 +262,10 @@
 			<artifactId>spring-cloud-loadbalancer</artifactId>
 			<groupId>org.springframework.cloud</groupId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 
 		<!-- GRPC::BEGIN -->
 		<dependency>
@@ -322,6 +325,10 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-hibernate5</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>problem-spring-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
